--- a/auction-house-web/src/main/resources/templates/lots/index.html
+++ b/auction-house-web/src/main/resources/templates/lots/index.html
@@ -13,6 +13,7 @@
     <tr>
         <th>Id</th>
         <th>Item name</th>
+        <th>Item type</th>
         <th>Original price</th>
         <th>Bid price</th>
         <th>Expire Date</th>
@@ -23,6 +24,7 @@
     <tr th:each="lot : ${lots}">
         <td th:text="${lot?.id}">1</td>
         <td th:text="${lot?.item?.name}">item name</td>
+        <td th:text="${lot?.item?.type}">item type</td>
         <td th:text="${lot?.originPrice}">10000.0</td>
         <td th:text="${lot?.bidPrice}">10000.0</td>
         <td th:text="${lot?.expireDate}">01.01.2022</td>
