--- a/auction-house-web/src/main/resources/templates/items/index.html
+++ b/auction-house-web/src/main/resources/templates/items/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, 'items')}">
 <head>
     <meta charset="UTF-8">
     <title>Lots</title>
 </head>
 <body>
 <!--/*@thymesVar id="item" type="com.demo.auctionhouse.model.Item"*/-->
-<h1 th:text="'List of items'">Lots list</h1>
+<h2 th:text="'List of items'">Lots list</h2>
 
-<table>
+<table class="table table-striped">
     <thead>
     <tr>
-        <th>Id</th>
-        <th>Item name</th>
-        <th>Item type</th>
+        <th style="width: 150px;">Id</th>
+        <th style="width: 150px;">Item name</th>
+        <th style="width: 150px;">Item type</th>
     </tr>
     </thead>
     <tbody>
