Added listed data

--- a/auction-house-web/src/main/resources/templates/items/index.html
+++ b/auction-house-web/src/main/resources/templates/items/index.html
@@ -5,6 +5,22 @@
     <title>Items Index</title>
 </head>
 <body>
-    <h1 th:text="'Items Index Page'">Items Index page</h1>
+<h1 th:text="'Items Index Page'">Items Index page</h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Type</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr th:each="item: ${items}">
+        <td th:text="${item?.getName()}">Name</td>
+        <td th:text="${item?.getType()?.getType()}">Type</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
