--- a/auction-house-web/src/main/resources/templates/lots/index.html
+++ b/auction-house-web/src/main/resources/templates/lots/index.html
@@ -5,6 +5,32 @@
     <title>Lots Index</title>
 </head>
 <body>
-    <h1 th:text="'Lots Index Page'">Lots Index page</h1>
+<h1 th:text="'Lots Index Page'">Lots Index page</h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>Auction house</th>
+        <th>Item name</th>
+        <th>Seller Name</th>
+        <th>Best Bid Name</th>
+        <th>Expire Date/Time</th>
+        <th>Origin Price</th>
+        <th>Bid Price</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr th:each="lot: ${lots}">
+        <td th:text="${lot?.getAuctionHouse()?.getName()}">Auction house</td>
+        <td th:text="${lot?.getItem()?.getName()}">Item Name</td>
+        <td th:text="${lot?.getSeller()?.getName()}">Seller Name</td>
+        <td th:text="${lot?.getBestBidPerson()?.getName()}">Best Bid Name</td>
+        <td th:text="${lot?.getExpireDateTime()}">Expire Date/Time</td>
+        <td th:text="${lot?.getOriginPrice()}">Origin Price</td>
+        <td th:text="${lot?.getBidPrice()}">Origin Price</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
