Added base link mappings

--- a/auction-house-web/src/main/resources/templates/fragments/layout.html
+++ b/auction-house-web/src/main/resources/templates/fragments/layout.html
@@ -55,9 +55,9 @@
             <span>Find lots</span>
           </li>
 
-          <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
+          <li th:replace="::menuItem ('/items','items','items','th-list','Items')">
             <span class="fa fa-th-list" aria-hidden="true"></span>
-            <span>Veterinarians</span>
+            <span>Items</span>
           </li>
 
           <li
