--- a/auction-house-web/src/main/resources/templates/items/index.html
+++ b/auction-house-web/src/main/resources/templates/items/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'items')}">
 <head>
     <meta charset="UTF-8">
     <title>Items Index</title>
 </head>
 <body>
-<h1 th:text="'Items Index Page'">Items Index page</h1>
+<h2 th:text="'Items Index Page'">Items Index page</h2>
 
-<table>
+<table class="table table-striped">
     <thead>
     <tr>
-        <th>Name</th>
-        <th>Type</th>
+        <th style="width: 150px;">Name</th>
+        <th style="width: 150px;">Type</th>
     </tr>
     </thead>
 
