--- a/auction-house-web/src/main/resources/templates/lots/index.html
+++ b/auction-house-web/src/main/resources/templates/lots/index.html
@@ -25,10 +25,10 @@
         <td th:text="${lot?.getItem()?.getName()}">Item Name</td>
         <td th:text="${lot?.getSeller()?.getName()}">Seller Name</td>
         <td th:text="${lot?.getBestBidPerson()?.getName()}">Best Bid Name</td>
-        <td th:text="${lot?.getExpireDateTime()}">Expire Date/Time</td>
-        <td th:text="${lot?.getOriginPrice()}">Origin Price</td>
-        <td th:text="${lot?.getBidPrice()}">Origin Price</td>
-        <td th:text="${lot?.getStatus()?.getStatus()}">Status</td>
+        <td th:text="${lot?.getDescription()?.getExpireDateTime()}">Expire Date/Time</td>
+        <td th:text="${lot?.getDescription()?.getOriginPrice()}">Origin Price</td>
+        <td th:text="${lot?.getDescription()?.getBidPrice()}">Bid Price</td>
+        <td th:text="${lot?.getDescription()?.getStatus()?.getStatus()}">Status</td>
     </tr>
     </tbody>
 </table>
