Minor front fixes

--- a/auction-house-web/src/main/resources/static/resources/css/auction.css
+++ b/auction-house-web/src/main/resources/static/resources/css/auction.css
@@ -8009,4 +8009,4 @@ strong {
     margin-top: 10px;
     margin-bottom: 30px; } }
 
-/*# sourceMappingURL=../../../../../../target/petclinic.css.map */
+/*# sourceMappingURL=../../../../../../target/auction.css.map */
