--- a/auction-house-web/src/main/resources/templates/items/index.html
+++ b/auction-house-web/src/main/resources/templates/items/index.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'items')}">
 <head>
     <meta charset="UTF-8">
-    <title>Items Index</title>
+    <title>Items</title>
 </head>
 <body>
-<h2 th:text="'Items Index Page'">Items Index page</h2>
+<h2 th:text="'Items'">Items</h2>
 
 <table class="table table-striped">
     <thead>
