--- a/auction-house-web/src/main/resources/templates/fragments/layout.html
+++ b/auction-house-web/src/main/resources/templates/fragments/layout.html
@@ -18,7 +18,7 @@
     <![endif]-->
 
   <link th:href="@{/webjars/font-awesome/css/font-awesome.min.css}" rel="stylesheet">
-  <link rel="stylesheet" th:href="@{/resources/css/petclinic.css}" />
+  <link rel="stylesheet" th:href="@{/resources/css/auction.css}" />
 
 </head>
 
