--- a/auction-house-web/src/main/resources/templates/lots/index.html
+++ b/auction-house-web/src/main/resources/templates/lots/index.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'lots')}">
 <head>
     <meta charset="UTF-8">
-    <title>Lots Index</title>
+    <title>Lots</title>
 </head>
 <body>
-<h2 th:text="'Lots Index Page'">Lots Index page</h2>
+<h2 th:text="'Lots'">Lots</h2>
 
 <table class="table table-striped">
     <thead>
