--- a/auction-house-web/src/main/resources/templates/lots/index.html
+++ b/auction-house-web/src/main/resources/templates/lots/index.html
@@ -24,11 +24,11 @@
     <tr th:each="lot: ${lots}">
         <td th:text="${lot?.getItem()?.getName()}">Item Name</td>
         <td th:text="${lot?.getSeller()?.getName()}">Seller Name</td>
-        <td th:text="${lot?.getBestBidPerson()?.getName()}">Best Bid Name</td>
-        <td th:text="${lot?.getDescription()?.getExpireDateTime()}">Expire Date/Time</td>
-        <td th:text="${lot?.getDescription()?.getInitialPrice()}">Origin Price</td>
-        <td th:text="${lot?.getDescription()?.getBidPrice()}">Bid Price</td>
-        <td th:text="${lot?.getDescription()?.getStatus()?.getStatus()}">Status</td>
+        <td th:text="${lot?.getBestBidUser()?.getName()}">Best Bid Name</td>
+        <td th:text="${lot?.getDetail()?.getExpireDateTime()}">Expire Date/Time</td>
+        <td th:text="${lot?.getDetail()?.getInitialPrice()}">Origin Price</td>
+        <td th:text="${lot?.getDetail()?.getBidPrice()}">Bid Price</td>
+        <td th:text="${lot?.getDetail()?.getStatus()?.getStatus()}">Status</td>
     </tr>
     </tbody>
 </table>
