--- a/auction-house-web/src/main/resources/templates/lots/index.html
+++ b/auction-house-web/src/main/resources/templates/lots/index.html
@@ -28,7 +28,7 @@
         <td th:text="${lot?.getDetail()?.getExpireDateTime()}">Expire Date/Time</td>
         <td th:text="${lot?.getDetail()?.getInitialPrice()}">Origin Price</td>
         <td th:text="${lot?.getDetail()?.getBidPrice()}">Bid Price</td>
-        <td th:text="${lot?.getDetail()?.getStatus()?.getStatus()}">Status</td>
+        <td th:text="${lot?.getDetail()?.getStatus()}">Status</td>
     </tr>
     </tbody>
 </table>
