Added spring security with jdbc authentication

--- a/auction-house-web/src/main/resources/templates/index.html
+++ b/auction-house-web/src/main/resources/templates/index.html
@@ -10,6 +10,10 @@
     <div class="col-md-12">
         <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
     </div>
+
+    <form th:action="@{/logout}" method="post" style="max-width: 350px; margin: 0 auto;">
+        <input type="submit" value="Logout" class="btn btn-primary" />
+    </form>
 </div>
 
 </body>
