--- a/auction-house-web/src/main/resources/templates/lots/index.html
+++ b/auction-house-web/src/main/resources/templates/lots/index.html
@@ -24,7 +24,7 @@
     <tr th:each="lot: ${lots}">
         <td th:text="${lot?.getItem()?.getName()}">Item Name</td>
         <td th:text="${lot?.getSeller()?.getName()}">Seller Name</td>
-        <td th:text="${lot?.getBestBidUser()?.getName()}">Best Bid Name</td>
+        <td th:text="${lot?.getBestBidUserDetails()?.getName()}">Best Bid Name</td>
         <td th:text="${lot?.getDetail()?.getExpireDateTime()}">Expire Date/Time</td>
         <td th:text="${lot?.getDetail()?.getInitialPrice()}">Origin Price</td>
         <td th:text="${lot?.getDetail()?.getBidPrice()}">Bid Price</td>
