--- a/auction-house-web/src/main/resources/templates/fragments/layout.html
+++ b/auction-house-web/src/main/resources/templates/fragments/layout.html
@@ -53,7 +53,7 @@
                     <span>Home</span>
                 </li>
 
-                <li th:replace="::menuItem ('/lots/find','lots','find lots','search','Find lots')">
+                <li th:replace="::menuItem ('/lots','lots','find lots','search','Lots')">
                     <span class="fa fa-search" aria-hidden="true"></span>
                     <span>Find lots</span>
                 </li>
@@ -63,12 +63,7 @@
                     <span>Items</span>
                 </li>
 
-                <li th:replace="::menuItem ('/oups','error','trigger a RuntimeException to see how it is handled','exclamation-triangle','Error')">
-                    <span class="fa exclamation-triangle" aria-hidden="true"></span>
-                    <span>Error</span>
-                </li>
-
-                <li sec:authorize="hasRole('ADMIN')" th:replace="::menuItem ('/user/detail','user','user','th-list','User')">
+                <li sec:authorize="hasRole('ADMIN')" th:replace="::menuItem ('/users','user','user','th-list','Users')">
                     <span class="fa fa-th-list" aria-hidden="true"></span>
                     <span>User</span>
                 </li>
